--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
   "name": "card-info",
   "version": "1.2.4",
-  "engines": {
-    "node": "7.7.1",
-    "npm": "4.5.0"
-  },
   "description": "Get bank logo, colors, brand and etc. by card number",
   "main": "dist/card-info.js",
   "scripts": {
@@ -26,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iserdmi/card-info.git"
+    "url": "git+https://github.com/kilimangara/card-info.git"
   },
   "keywords": [
     "card",
